tests/baselines/reference/jsdocTemplateTag(strict=true).errors.txt
forgot.js(23,1): error TS2322: Type '(keyframes: Object[]) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes | null, options?: number | KeyframeAnimationOptions | undefined) => Animation'.
  Types of parameters 'keyframes' and 'keyframes' are incompatible.
    Type 'Keyframe[] | PropertyIndexedKeyframes | null' is not assignable to type 'Object[]'.
      Type 'null' is not assignable to type 'Object[]'.


==== forgot.js (1 errors) ====
    /**
     * @param {T} a
     * @template T
     */
    function f(a) {
        return () => a
    }
    let n = f(1)()
    
    /**
     * @param {T} a
     * @template T
     * @returns {function(): T}
     */
    function g(a) {
        return () => a
    }
    let s = g('hi')()
    
    /**
     * @param {Array.<Object>} keyframes - Can't look up types on Element since it's a global in another file. (But it shouldn't crash).
     */
    Element.prototype.animate = function(keyframes) {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(keyframes: Object[]) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes | null, options?: number | KeyframeAnimationOptions | undefined) => Animation'.
!!! error TS2322:   Types of parameters 'keyframes' and 'keyframes' are incompatible.
!!! error TS2322:     Type 'Keyframe[] | PropertyIndexedKeyframes | null' is not assignable to type 'Object[]'.
!!! error TS2322:       Type 'null' is not assignable to type 'Object[]'.
    